chore: Minor tweaks to improve readability and adress negative cases