@@ -6,6 +6,7 @@ import io.swagger.v3.oas.models.PathItem;
 import java.util.Arrays;
 import java.util.EnumMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.Function;
@@ -185,9 +186,9 @@ public enum HttpMethod {
      */
     INDEX;
 
-    private static final List<HttpMethod> REST_METHODS = Arrays.asList(POST, PUT, GET, TRACE, DELETE, PATCH, HEAD);
+    private static final List<HttpMethod> REST_METHODS = List.of(POST, PUT, GET, TRACE, DELETE, PATCH, HEAD);
 
-    private static final List<HttpMethod> NON_REST_METHODS = Arrays.asList(CONNECT, COPY, MOVE,
+    private static final List<HttpMethod> NON_REST_METHODS = List.of(CONNECT, COPY, MOVE,
             PROPPATCH, PROPFIND, MKCOL, LOCK, UNLOCK, SEARCH,
             BIND, UNBIND, REBIND, MKREDIRECTREF,
             UPDATEREDIRECTREF, ORDERPATCH, ACL, REPORT);
@@ -266,7 +267,7 @@ public enum HttpMethod {
      * @throws IllegalArgumentException If the provided method String is not a valid HTTP method.
      */
     public static boolean requiresBody(String method) {
-        return requiresBody(HttpMethod.valueOf(method));
+        return requiresBody(HttpMethod.valueOf(method.toUpperCase(Locale.ROOT)));
     }
 
     /**
@@ -282,7 +283,7 @@ public enum HttpMethod {
         if (extractor == null) {
             throw new IllegalArgumentException("Unsupported HTTP method: " + method);
         }
-        return OPERATIONS.get(method).apply(pathItem);
+        return extractor.apply(pathItem);
     }
 
     /**
@@ -290,7 +291,6 @@ public enum HttpMethod {
      *
      * @param httpM The HTTP method string to convert.
      * @return An Optional containing the HttpMethod enum if found, or empty if not found.
-     * @throws NullPointerException If the provided HTTP method string is null.
      */
     public static Optional<HttpMethod> fromString(String httpM) {
         return Arrays.stream(values())
